# chess_gym

./: .gitignore  README.md  example.ipynb  pyproject.toml  setup.py
chess_gym/: __init__.py  agent.py  chess_env.py  spaces.py  utils.py  wrapper.py
chess_gym/envs/: __init__.py  chess_config.py  chess_env.py  observation_space.py
chess_gym/envs/spaces/: action_space.py  observation_space.py  utils.py
chess_gym/spaces/: action_space.py  observation_space.py
chess_gym/spaces_mod/: action_space.py  observation_space.py  utils.py
